a1/brendan_gordon/TEST_PROGRAMS/invalidtype/dongkyu_kim/error1.min
# initialization of a variable error

var x: int;
var y: int;

x = 4;
y = "hello";


